--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "gulp; npm publish;",
-    "docs": "jsdoc src/index.js -c jsdoc.json",
-    "deploydocs": "surge --domain chat-engine-examples.surge.sh",
-    "deploy": "npm run docs; npm run deploydocs;"
+    "docs": "jsdoc src/index.js -c jsdoc.json"
   },
   "repository": {
     "type": "git",
