--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "async": "^2.1.2",
     "eventemitter2": "^2.2.1",
-    "pubnub": "^4.10.0"
+    "pubnub": "^4.13.0",
+    "request": "^2.81.0"
   }
 }
