--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
   },
   "homepage": "https://github.com/pubnub/chat-engine#readme",
   "devDependencies": {
+    "body-parser": "^1.17.2",
     "browserify": "^13.1.0",
     "chai": "^3.5.0",
     "chat-engine-typing-indicator": "0.0.x",
+    "docdash": "^0.4.0",
+    "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-uglify": "^2.0.0",
     "mocha": "^3.1.2",
-    "vinyl-source-stream": "^1.1.0",
-    "docdash": "^0.4.0"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "async": "^2.1.2",
